Added more HTML files and a script.js file. Also added a css folder to put all the css files in

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filmography Quest</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
+<header>
+    <h1>Filmography Quest</h1>
+    <p>For all the movie geeks, film nerds, cinephiles, or anyone who just loves movies.</p>
+</header>
 <body>
-    <header>
-        <h1>Filmography Quest</h1>
-        <p>For all the movie geeks, film nerds, cinephiles, or anyone who just loves movies.</p>
-    </header>
     <main class="bttn-and-descrip">
         
         <div class="button-1">
@@ -23,7 +23,7 @@
             </p>
         </div>
         <div class="button-2">
-            <button type="button" id="random">Random Encounters</button>
+            <button type="button" id="random-picks">Random Encounters</button>
             <p id="description2">Not in the mood to find a movie on your own? Click above. You'll be given an option to search for one entertainer
                 or pick a genre. Pick a number to determine how many movies you'd like returned, click on "Find A Movie for Me" and a random
                 list of movies will appear. Decide from there which movie you think you'd enjoy the most. If you don't like the selection you can refresh 
@@ -39,5 +39,6 @@
         </div>
         
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
