Added an image to one of the webpages

--- a/findFave.html
+++ b/findFave.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filmography Quest - Find Your Favorite</title>
-    <link rel="stylesheet" href="findFave.css">
+    <link rel="stylesheet" href="css/findFave.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<header>
-    <h1>Filmography Quest</h1>
-    <p>For all the movie geeks, film nerds, cinephiles, or anyone who just loves movies.</p>
-</header>
+
 <body>
+    <header>
+        <h1>Filmography Quest</h1>
+        <p>For all the movie geeks, film nerds, cinephiles, or anyone who just loves movies.</p>
+    </header>
     <script src="script.js"></script>
 </body>
 </html>
