Changed the title and background on the opening page

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kings&family=Limelight&family=Monofett&family=Rubik+80s+Fade&family=Rubik+Glitch&family=Sixtyfour&family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
 </head>
 <header>
-    <h1>Filmography Quest</h1>
-    <p>For all the movie geeks, film nerds, cinephiles, or anyone who just loves movies.</p>
+    <h1>REELPLAY</h1>
+    <p>For all the movie geeks, film nerds, cinephiles, screen fiends, or anyone that just loves movies.</p>
 </header>
 <body>
     <main class="bttn-and-descrip">
