Worked on the layout of the Find Your Favorites page

--- a/findFave.html
+++ b/findFave.html
@@ -7,14 +7,21 @@
     <link rel="stylesheet" href="css/findFave.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1>Filmography Quest</h1>
-        <p>For all the movie geeks, film nerds, cinephiles, or anyone who just loves movies.</p>
+        <h1>REELPLAY</h1>
     </header>
+    <main>
+        <div class="search-bar">
+            <form action="" method="GET">
+                <input type="text" name="query" placeholder="Search Here">
+                <button type="submit">Search</button>
+            </form>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
