--- a/index.html
+++ b/index.html
@@ -14,30 +14,32 @@
     <p>For all the movie geeks, film nerds, cinephiles, screen fiends, or anyone that just loves movies.</p>
 </header>
 <body>
-    <main class="bttn-and-descrip">
-        
-        <div class="button-1">
-            <button type="button" id="find-fave">Find Your Favorite</button>
-            <p id="description1">To simply find an entertainer and see their filmography, click above. Type who you'd like to see in the search bar, click on their
-                picture, and their filmography will appear beside them.
-            </p>
-        </div>
-        <div class="button-2">
-            <button type="button" id="random-picks">Random Encounters</button>
-            <p id="description2">Not in the mood to find a movie on your own? Click above. You'll be given an option to search for one entertainer
-                or pick a genre. Pick a number to determine how many movies you'd like returned, click on "Find A Movie for Me" and a random
-                list of movies will appear. Decide from there which movie you think you'd enjoy the most. If you don't like the selection you can refresh 
-                as many times as you'd like.
-            </p>
-        </div>
-        <div class="button-3">
-            <button type="button" id="slot-game">Slot Game</button>
-            <p id="description3">Want to play a game? Click above. This is the Slot Game. You'll be asked to select a number and based on the number
-                you select, the slot game will find two entertainers who have worked together that many times and a list of their movies will appear. 
-                Press the "Push Me" button to start the slots.
-            </p>
-        </div>
-        
+    <main>
+
+        <nav class="bttn-and-descrip">
+            <div class="button-1">
+                <button type="button" id="find-fave">Find Your Favorite</button>
+                <p id="description1">To simply find an entertainer and see their filmography, click above. Type who you'd like to see in the search bar, click on their
+                    picture, and their filmography will appear beside them.
+                </p>
+            </div>
+            <div class="button-2">
+                <button type="button" id="random-picks">Random Encounters</button>
+                <p id="description2">Not in the mood to find a movie on your own? Click above. You'll be given an option to search for one entertainer
+                    or pick a genre. Pick a number to determine how many movies you'd like returned, click on "Find A Movie for Me" and a random
+                    list of movies will appear. Decide from there which movie you think you'd enjoy the most. If you don't like the selection you can refresh 
+                    as many times as you'd like.
+                </p>
+            </div>
+            <div class="button-3">
+                <button type="button" id="slot-game">Slot Game</button>
+                <p id="description3">Want to play a game? Click above. This is the Slot Game. You'll be asked to select a number and based on the number
+                    you select, the slot game will find two entertainers who have worked together that many times and a list of their movies will appear. 
+                    Press the "Push Me" button to start the slots.
+                </p>
+            </div>
+        </nav>
+
     </main>
     <script src="script.js"></script>
 </body>
