--- a/findFave.html
+++ b/findFave.html
@@ -17,11 +17,13 @@
     <main>
         <div class="search-bar">
             <form action="" method="GET">
-                <input type="text" name="query" placeholder="Search Here">
-                <button type="submit">Search</button>
+                <input type="text" name="query" id="search-input" placeholder="Search Here">
+                <button type="submit" id="search-btn">Search</button>
             </form>
+            <div id="results"></div>
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/findFave.js"></script>
 </body>
 </html>
