I've got the fimography showing up now! For multiple results I need to have a name and maybe a birthdate show up underneath the photo

--- a/findFave.html
+++ b/findFave.html
@@ -21,6 +21,7 @@
                 <button type="submit" id="search-btn">Search</button>
             </form>
             <div id="results"></div>
+            <div id="filmography"></div>
         </div>
     </main>
     <script src="js/script.js"></script>
