The photo and filmography now appear side by side. All other images disappear when the correct image is clicked

--- a/findFave.html
+++ b/findFave.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <div class="search-bar">
-            <form action="" method="GET">
+            <form action="" method="GET" id="search-form">
                 <input type="text" name="query" id="search-input" placeholder="Search Here">
                 <button type="submit" id="search-btn">Search</button>
             </form>
