Started working on the random picks webpage and added a 'Back to Home' button on the find fave webpage

--- a/findFave.html
+++ b/findFave.html
@@ -27,4 +27,5 @@
     <script src="js/script.js"></script>
     <script src="js/findFave.js"></script>
 </body>
+<footer><a href="index.html">Back to Home</a></footer>
 </html>
