--- a/randomPicks.html
+++ b/randomPicks.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filmography Quest - Random Movie Picks</title>
-    <link rel="stylesheet" href="randomPicks.css">
+    <link rel="stylesheet" href="css/randomPicks.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
 </head>
 <header>
-    <h1>Filmography Quest</h1>
-    <p>For all the movie geeks, film nerds, cinephiles, or anyone who just loves movies.</p>
+    <h1>REELPLAY</h1>
 </header>
 <body>
+    <h2>Let's Get Random</h2>
+    <div class="instructions">
+        <ol>
+            <li>Pick a Genre</li>
+            <li>Click "Find A Movie For me"</li>
+            <li>Select the one you'd like to watch</li>
+            <li>Don't like what you see? Click the button again and a new list will regenerate</li>
+        </ol>
+    </div>
+</body>
     <script src="script.js"></script>
 </body>
 </html>
