Finally got the layout how I wanted for the random picks page

--- a/randomPicks.html
+++ b/randomPicks.html
@@ -12,21 +12,20 @@
 
 <body>
     <header>
-        <h1>REELPLAY</h1>
+        <h1>Pick Your Genre</h1>
     </header>
-    <div class="dropdown-menu">
-        <h3>Pick Your Genre</h3>
-        <label for="movie">Pick One
-            <select name="movie" id="random-pick">
-                <option value="action">Action</option>
-                <option value="comedy">Comedy</option>
-                <option value="horror">Horror</option>
-                <option value="sci-fi">Sci-fi</option>
-                <option value="drama">Drama</option>
-                <option value="romance">Romance</option>
-            </select>
-        </label>
-    </div>
+    <main>
+        <section class="tv-screen">
+            <div class="button-container">
+                <button class="genre-btn" type="button">Action</button>
+                <button class="genre-btn" type="button">Comedy</button>
+                <button class="genre-btn" type="button">Drama</button>
+                <button class="genre-btn" type="button">Horror</button>
+                <button class="genre-btn" type="button">Romance</button>
+                <button class="genre-btn" type="button">Sci-Fi</button>
+            </div>
+        </section>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
