Can't fetch the API correctly in my random picks page

--- a/randomPicks.html
+++ b/randomPicks.html
@@ -17,15 +17,17 @@
     <main>
         <section class="tv-screen">
             <div class="button-container">
-                <button class="genre-btn" type="button">Action</button>
-                <button class="genre-btn" type="button">Comedy</button>
-                <button class="genre-btn" type="button">Drama</button>
-                <button class="genre-btn" type="button">Horror</button>
-                <button class="genre-btn" type="button">Romance</button>
-                <button class="genre-btn" type="button">Sci-Fi</button>
+                <button class="genre-btn" type="button" data-genre-id = "28">Action</button>
+                <button class="genre-btn" type="button" data-genre-id = "35">Comedy</button>
+                <button class="genre-btn" type="button" data-genre-id = "18">Drama</button>
+                <button class="genre-btn" type="button" data-genre-id = "27">Horror</button>
+                <button class="genre-btn" type="button" data-genre-id = "10749">Romance</button>
+                <button class="genre-btn" type="button" data-genre-id = "878">Sci-Fi</button>
             </div>
         </section>
+        <section id="results" class="results-container"></section>
     </main>
     <script src="script.js"></script>
+    <script src="randomPicks.js"></script>
 </body>
 </html>
