Got the API fetched correctly and added movie posters to the results

--- a/randomPicks.html
+++ b/randomPicks.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Pick Your Genre</h1>
     </header>
-    <main>
+    <main class="content-wrapper">
         <section class="tv-screen">
             <div class="button-container">
                 <button class="genre-btn" type="button" data-genre-id = "28">Action</button>
@@ -27,7 +27,7 @@
         </section>
         <section id="results" class="results-container"></section>
     </main>
-    <script src="script.js"></script>
-    <script src="randomPicks.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/randomPicks.js"></script>
 </body>
 </html>
