Worked on the design of the search bar and button

--- a/findFave.html
+++ b/findFave.html
@@ -16,7 +16,7 @@
         <h1>REELPLAY</h1>
     </header>
     <main>
-        <div class="search-bar">
+        <div class="dropdown-search">
             <label for="role-select">Choose Entertainer Role:</label>
             <select name="role" id="role-select">
                 <option value="acting">Actor/Actress</option>
@@ -26,8 +26,8 @@
                 <option value="cinematography">Cinematographer</option>
             </select>
             <form action="" method="GET" id="search-form">
-                <input type="text" name="query" id="search-input" placeholder="Search Here">
-                <button type="submit" id="search-btn">Search</button>
+                <input type="text" name="query" id="search-input" placeholder="Type Name Here">
+                <button type="submit" id="search-btn">Click Me</button>
             </form>
             <div id="results"></div>
             <div id="filmography"></div>
