--- a/findFave.html
+++ b/findFave.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filmography Quest - Find Your Favorite</title>
+    <title>REELPLAY - Find Your Favorite</title>
     <link rel="stylesheet" href="css/findFave.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,6 +29,8 @@
                 <input type="text" name="query" id="search-input" placeholder="Type Name Here">
                 <button type="submit" id="search-btn">Click Me</button>
             </form>
+        </div>
+        <div class="layout-results hidden">
             <div id="results"></div>
             <div id="filmography"></div>
         </div>
