Finally got the layout mostly finished for the Find Favorite page!

--- a/findFave.html
+++ b/findFave.html
@@ -22,11 +22,9 @@
                 <option value="acting">Actor/Actress</option>
                 <option value="directing">Director</option>
                 <option value="writing">Screenwriter</option>
-                <option value="composing">Composer</option>
-                <option value="cinematography">Cinematographer</option>
             </select>
             <form action="" method="GET" id="search-form">
-                <input type="text" name="query" id="search-input" placeholder="Type Name Here">
+                <input type="text" name="query" id="search-input" placeholder="Type Name Here" autocomplete="off">
                 <button type="submit" id="search-btn">Click Me</button>
             </form>
         </div>
