Added a frontend folder and got my backend up and running for the most part

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REELPLAY</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kings&family=Limelight&family=Monofett&family=Rubik+80s+Fade&family=Rubik+Glitch&family=Sixtyfour&family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
@@ -41,6 +41,6 @@
         </section>
 
     </main>
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
