--- a/frontend/findFave.html
+++ b/frontend/findFave.html
@@ -33,8 +33,8 @@
             <div id="filmography"></div>
         </div>
     </main>
-    <script src="js/script.js"></script>
-    <script src="js/findFave.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/findFave.js"></script>
 </body>
-<footer><a href="index.html">Back to Home</a></footer>
+<footer><a href="/index.html">Back to Home</a></footer>
 </html>
