Finished the layout for all three pages and the backend is functioning. Started on media queries

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,40 +7,29 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kings&family=Limelight&family=Monofett&family=Rubik+80s+Fade&family=Rubik+Glitch&family=Sixtyfour&family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
 </head>
-<header>
-    <h1>REELPLAY</h1>
-    <p>For all the movie geeks, film nerds, cinephiles, screen fiends, or anyone that just loves movies.</p>
-</header>
 <body>
-    <main>
 
+    <header>
+        <h1>REELPLAY</h1>
+        <p>For all the movie geeks, film nerds, cinephiles, screen fiends, or anyone that just loves movies.</p>
+    </header>
+
+    <main>
         <section class="bttn-and-descrip">
             <div class="button-1">
-                <button type="button" id="find-fave">Find Your Favorite</button>
-                <p id="description1">To simply find an entertainer and see their filmography, click above. Type who you'd like to see in the search bar, click on their
-                    picture, and their filmography will appear beside them.
-                </p>
+                <div class="exit-sign">EXIT</div>
+                <button type="button" id="find-fave" aria-label="Go to Find Your Favorite Page">Find Your Favorite</button>
             </div>
             <div class="button-2">
-                <button type="button" id="random-picks">Random Encounters</button>
-                <p id="description2">Not in the mood to find a movie on your own? Click above. You'll be given an option to search for one entertainer
-                    or pick a genre. Pick a number to determine how many movies you'd like returned, click on "Find A Movie for Me" and a random
-                    list of movies will appear. Decide from there which movie you think you'd enjoy the most. If you don't like the selection you can refresh 
-                    as many times as you'd like.
-                </p>
-            </div>
-            <div class="button-3">
-                <button type="button" id="slot-game">Slot Game</button>
-                <p id="description3">Want to play a game? Click above. This is the Slot Game. You'll be asked to select a number and based on the number
-                    you select, the slot game will find two entertainers who have worked together that many times and a list of their movies will appear. 
-                    Press the "Push Me" button to start the slots.
-                </p>
+                <div class="exit-sign">EXIT</div>
+                <button type="button" id="random-picks" aria-label="Go to Shuffle and Watch Page">Shuffle & Watch</button>
             </div>
         </section>
-
     </main>
+
     <script src="/js/script.js"></script>
+
 </body>
 </html>
