--- a/frontend/randomPicks.html
+++ b/frontend/randomPicks.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>Pick Your Genre</h1>
+        <h1>REELPLAY - Pick Your Genre</h1>
     </header>
     <main class="content-wrapper">
         <section class="tv-screen">
