Final revisions to Random Picks page and added some screenshots for the README

--- a/frontend/randomPicks.html
+++ b/frontend/randomPicks.html
@@ -30,4 +30,7 @@
     <script src="js/script.js"></script>
     <script src="js/randomPicks.js"></script>
 </body>
+<footer class="footer-buttons">
+  <a href="/index.html" class="nav-btn">Back to Home</a>
+</footer>
 </html>
